Fix issue: header covers a part of main image

--- a/hotShareWeb/client/posts/showPosts.less
+++ b/hotShareWeb/client/posts/showPosts.less
@@ -13,7 +13,7 @@
 //.showPosts .head .list-group{margin-bottom: 0px;}
 //.showPosts .head .modal-body{padding-bottom: 0px;padding-left: 0px; padding-right: 0px;padding-top: 0px;}
 //.showPosts .head .modal-dialog{position: absolute;margin-left:0px;margin-bottom: 0px;top: 10%;left:0px;right:0px;width: 100%;}
-.showPosts .content{padding-bottom: 30px;}
+.showPosts .content{padding-top: 40px; padding-bottom: 30px;}
 //.showPosts .content .mainImage{margin-bottom: 20px;background-repeat: no-repeat;background-size: 100% auto;background-position: center center;}
 .showPosts .content .mainImage{position: relative;overflow: hidden;margin-bottom: 5px;}
 .showPosts .contentList{position:relative;}
